feat(api): create task scheduler
